--- a/sails-bin/templates/admin/metrics.html
+++ b/sails-bin/templates/admin/metrics.html
@@ -2,13 +2,13 @@
 {% block title %}Metrics{% endblock title %}
 {% block content %}
 <main class="container">
-  <div class="bg-light p-5 rounded">
+  <div class="p-5 rounded shadow">
     <h1>Metrics and Statistics</h1>
     <p class="lead">Don't confide confidential information to anyone.</p>
   </div>
   <br>
 
-  <div class="bg-light p-5 rounded">
+  <div class="p-5 rounded shadow">
     <h1>Orders</h1>
     <table class="table table-hover">
     <tbody>
@@ -57,7 +57,7 @@
   </div>
   <br>
 
-  <div class="bg-light p-5 rounded">
+  <div class="p-5 rounded shadow">
     <h1>Users</h1>
     <table class="table table-hover">
     <tbody>
