--- a/sails-bin/templates/book_list.html
+++ b/sails-bin/templates/book_list.html
@@ -1,4 +1,4 @@
-<div class="bg-light p-5 rounded">
+<div class="p-5 rounded shadow">
   <h3>Books</h3>
   <table class="table" data-toggle="table" data-pagination="true" data-search="true">
     <thead>
