--- a/sails-bin/templates/market/post_book.html
+++ b/sails-bin/templates/market/post_book.html
@@ -2,13 +2,13 @@
 {% block title %}Post book{% endblock title %}
 {% block content %}
   <main class="container">
-  <div class="bg-light p-5 rounded">
+  <div class="p-5 rounded shadow">
     <h1>Post a book</h1>
     <p class="lead">Fill in relevant information to post a book for sale. If you want to add pictures, upload them elsewhere and paste link in the description below. If you don't know how to, please refer to our <a href="https://github.com/flibrary/flibrary.github.io/wiki/PublishGuide " target="_blank">help page</a>.</p>
   </div>
   <br>
 
-  <div class="bg-light p-5 rounded">
+  <div class="p-5 rounded shadow">
     <h1>Book info</h1>
     {% block form_link %}
     <form action="cow_book" method="post">
