--- a/sails-bin/templates/orders/admin_order_info.html
+++ b/sails-bin/templates/orders/admin_order_info.html
@@ -2,7 +2,7 @@
 {% block title %}Order Details{% endblock title %}
 {% block content %}
 <main class="container">
-  <div class="bg-light p-5 rounded">
+  <div class="p-5 rounded shadow">
     <h1>Details of order #{{ order.get_shortid() }}</h1>
       <table class="table table-hover">
     <tbody>
