--- a/sails-bin/templates/user/email_verified.html
+++ b/sails-bin/templates/user/email_verified.html
@@ -2,7 +2,7 @@
 {% block title %}Email Verified!{% endblock title %}
 {% block content %}
 <main class="container">
-    <div class="bg-light p-5 rounded">
+    <div class="p-5 rounded shadow">
       <h1>You are all set!</h1>
 
       Your email has been successfully verified, and your account has been activated.
