--- a/sails-bin/templates/user/signup_instruction.html
+++ b/sails-bin/templates/user/signup_instruction.html
@@ -2,7 +2,7 @@
 {% block title %}Email Confirmation{% endblock title %}
 {% block content %}
 <main class="container">
-    <div class="bg-light p-5 rounded">
+    <div class="p-5 rounded shadow">
       <h1>Verify your email address</h1>
 
       We have sent your an email to confirm. Go and check your inbox and junk folder to verify your email.
