--- a/sails-bin/templates/user/update_user_page.html
+++ b/sails-bin/templates/user/update_user_page.html
@@ -2,13 +2,13 @@
 {% block title %}Update info{% endblock title %}
 {% block content %}
   <main class="container">
-  <div class="bg-light p-5 rounded">
+  <div class="p-5 rounded shadow">
     <h1>Update your information</h1>
     <p class="lead">Here you can update your name, school, and password</p>
   </div>
   <br>
 
-  <div class="bg-light p-5 rounded">
+  <div class="p-5 rounded shadow">
     <h1>User info</h1>
     <form action="/user/update_user" method="post">
     <div class="form-group row">
