--- a/sails-bin/templates/market/all_books.html
+++ b/sails-bin/templates/market/all_books.html
@@ -6,7 +6,7 @@
 <main class="container">
   {% include "display_flash.html" %}
 
-  <div class="bg-light p-5 rounded">
+  <div class="p-5 rounded shadow">
     <h1>Welcome to the market</h1>
     <p class="lead">Here you can see what books are on sale and post your own books.</p>
     <a href="categories" class="btn btn-primary" role="button">Browse by categories</a>
@@ -22,7 +22,7 @@
   {% if books.len() > 0 %}
   {% include "book_list.html" %}
   {% else %}
-    <div class="bg-light p-5 rounded">
+    <div class="p-5 rounded shadow">
       <h3>No books under your request</h3>
     </div>
     <br>
