--- a/sails-bin/templates/market/instruction.html
+++ b/sails-bin/templates/market/instruction.html
@@ -2,7 +2,7 @@
 {% block title %}Instruction{% endblock title %}
 {% block content %}
 <main class="container">
-    <div class="bg-light p-5 rounded">
+    <div class="p-5 rounded shadow">
       <h1>Here are the last things to do</h1>
 
       <h4>Step 1</h4>
