--- a/sails-bin/templates/messages/chat.html
+++ b/sails-bin/templates/messages/chat.html
@@ -2,7 +2,7 @@
 {% block title %}Chat{% endblock title %}
 {% block content %}
 <main class="container">
-  <div class="bg-light p-5 rounded">
+  <div class="p-5 rounded shadow">
     <h1>Chat with {{receiver.get_id() }}</h1>
     <br>
 
@@ -27,7 +27,7 @@
 
   </div>
   <br>
-  <div class="bg-light p-5 rounded" id="draft_section">
+  <div class="shadow p-5 rounded" id="draft_section">
     <form action="send?user_id={{ receiver.get_id() }}" method="post">
       <div class="form-group row">
 	<div class="col-sm-10">
