--- a/sails-bin/templates/orders/order_info_seller.html
+++ b/sails-bin/templates/orders/order_info_seller.html
@@ -2,7 +2,7 @@
 {% block title %}Order Details{% endblock title %}
 {% block content %}
 <main class="container">
-    <div class="bg-light p-5 rounded">
+    <div class="p-5 rounded shadow">
       <h1>Details of order #{{ order.get_shortid() }}</h1>
       <br>
       {% match order.get_transaction_status() %}
@@ -41,7 +41,7 @@
       {% endmatch %}
     </div>
 <br>
-<div class="bg-light p-5 rounded">
+<div class="p-5 rounded shadow">
       <table class="table table-hover">
     <tbody>
     <tr>
