--- a/sails-bin/templates/display_flash.html
+++ b/sails-bin/templates/display_flash.html
@@ -2,6 +2,7 @@
   {% when Some with (flash) %}
   <br>
   <div class="alert alert-warning" role="alert">
+    <i class="bi bi-exclamation-triangle-fill"></i>
     {{ flash }}
   </div>
   <br>
