--- a/sails-bin/templates/root/root.html
+++ b/sails-bin/templates/root/root.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Root dashboard{% endblock title %}
-{% block navbutton %}<li class="nav-item"><a href="/root/logout" class="btn btn-warning" role="button">Log out</a></li>{% endblock navbutton %}
+{% block navbutton %}<li class="nav-item"><a href="/root/logout" class="btn btn-warning" role="button"><i class="bi bi-box-arrow-left"></i> Log out</a></li>{% endblock navbutton %}
 
 {% block content %}
 <main class="container">
-  {% include "display_flash.html" %}
   <div class="p-5 rounded shadow">
     <h1>You are now at the root dashboard</h1>
     <p class="lead">Please leave unless you fully understand what you are doing.</p>
