--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -11,6 +11,7 @@
   <!-- Bootstrap core CSS -->
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
   <link href="/static/css/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 
   <link href="/static/css/bootstrap-table.min.css" rel="stylesheet">
   <link href="/static/css/summernote-fix.css" rel="stylesheet">
