--- a/sails-bin/templates/orders/order_info_seller_or_admin.html
+++ b/sails-bin/templates/orders/order_info_seller_or_admin.html
@@ -3,7 +3,7 @@
 {% block content %}
 <main class="container">
     <div class="p-5 rounded shadow">
-      <h1>Details of your order #{{ order.get_shortid() }}</h1>
+      <h1>Details of order #{{ order.get_shortid() }}</h1>
       <br>
       {% match order.get_transaction_status() %}
       {% when sails_db::enums::TransactionStatus::Refunded %}
@@ -20,23 +20,6 @@
       </div>
       <br>
       <h3>Order successfully placed</h3>
-      Scan the QR code or click the button to pay to proceed, then you should await the seller to confirm the payment.<br>
-      <br>
-
-      {% match resp.as_ref().unwrap() %}
-      {% when Ok with (resp) %}
-      <div class="alert alert-warning" role="alert">
-	注意：<b>请在扫码后三小时内付款。</b>
-      </div>
-      <center><div id="qrcode"></div></center><br>
-      <a href="alipays://platformapi/startapp?appId=20000067&url={{urlencoding::encode(resp.qr_code)}}" class="btn btn-primary" role="button">Pay via AliPay</a>
-      {% when Err with (err) %}
-      <div class="alert alert-warning" role="alert">
-	<b>创建交易错误，请联系客服</b>: {{ err }}
-      </div>
-      {% endmatch %}
-      <a href="/orders/confirm?order_id={{order.get_id()}}" class="btn btn-success" role="button">Next</a>
-
 
       {% when sails_db::enums::TransactionStatus::Paid %}
       <div class="progress">
@@ -44,15 +27,14 @@
       </div>
       <br>
       <h3>Order successfully paid</h3>
-      The last step to complete this order is to come to the warehouse to get your book! Do remember to bring the order ID: <code>{{ order.get_shortid() }}</code>.
 
       {% when sails_db::enums::TransactionStatus::Finished %}
       <div class="progress">
 	<div class="progress-bar bg-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
       </div>
       <br>
-      <h3>Congratulations, order has been successfully finished!</h2>
-      There is nothing left to do. Enjoy your book!
+      <h3>Order has been successfully finished!</h2>
+      There is nothing left to do.
       {% endmatch %}
     </div>
 <br>
@@ -91,13 +73,5 @@
 
 {% block script %}
 {% call super()%}
-  {% if resp.is_some() %}
-  {% if resp.as_ref().unwrap().is_ok() %}
-  <script type="text/javascript">
-    var qrcode = new QRCode("qrcode");
-    qrcode.makeCode("{{resp.as_ref().unwrap().as_ref().unwrap().qr_code}}");
-  </script>
-  {% endif %}
-  {% endif %}
   <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="9a9d77d4-fad3-4ab1-9022-e0f6856ab746";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 {% endblock script %}
