--- a/sails-bin/templates/user/signin.html
+++ b/sails-bin/templates/user/signin.html
@@ -19,9 +19,8 @@
       <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
       <label for="floatingPassword">Password</label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit"><i class="bi bi-box-arrow-in-right"></i> Sign in</button>
     <a href="/user/signup">Sign up</a>
   </form>
-  {% include "display_flash.html" %}
 </main>
 {% endblock body %}
