add BookAdmin permission flag; update index

--- a/sails-bin/templates/index.html
+++ b/sails-bin/templates/index.html
@@ -8,8 +8,8 @@
     <h1 class="display-4 fw-bold">FLibrary</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Where Knowledge Values</p>
-      <a href="/user" class="btn btn-primary" role="button">Start</a>
-      <a href="https://flibrary.lexugeyky.workers.dev/https://raw.githubusercontent.com/flibrary/flibrary.github.io/main/FLibrary%20Guide.pdf" class="btn btn-secondary" role="button">Learn More</a>
+      <a href="/user" class="btn btn-primary" role="button">User Portal</a>
+      <a href="/market/post_book_interim" class="btn btn-warning" role="button">Post a book</a>
     </div>
     </div>
 
