add reset password support

--- a/sails-bin/templates/index.html
+++ b/sails-bin/templates/index.html
@@ -32,5 +32,6 @@
 
 {% block script %}
   {% call super()%}
-  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="9a9d77d4-fad3-4ab1-9022-e0f6856ab746";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+  <script type="text/javascript">var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();(function(){var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];s1.async=true;s1.src='https://embed.tawk.to/61d7e5daf7cf527e84d0dfde/1fopljokh';s1.charset='UTF-8';s1.setAttribute('crossorigin','*');s0.parentNode.insertBefore(s1,s0);
+})();</script>
 {% endblock script %}
