--- a/sails-bin/templates/user/signin.html
+++ b/sails-bin/templates/user/signin.html
@@ -20,7 +20,8 @@
       <label for="floatingPassword">Password</label>
     </div>
     <button class="w-100 btn btn-lg btn-primary" type="submit"><i class="bi bi-box-arrow-in-right"></i> Sign in</button>
-    <a href="/user/signup">Sign up</a>
+    <a href="/user/signup">Sign up</a><br>
+    <a href="/user/reset_passwd">Reset Password</a>
   </form>
 </main>
 {% endblock body %}
